# zephyr

./: CMakeLists.txt  TODO  west.yml
cmake/modules/: extensions.cmake
doc/releases/: release-notes-4.3.rst
drivers/adc/: adc_stm32.c  adc_stm32wb0.c
drivers/audio/: wm8904.c
drivers/clock_control/: CMakeLists.txt  (+18 more)
kernel/: events.c  sched.c  thread.c
soc/st/stm32/: CMakeLists.txt  Kconfig  Kconfig.defconfig
soc/st/stm32/common/: CMakeLists.txt  Kconfig  stm32_backup_domain.c  stm32_backup_sram.c  stm32_global_periph_clocks.c  stm32_global_periph_clocks.h  stm32_hsem.h  stm32_wkup_pins.c
soc/st/stm32/stm32c0x/: power.c  poweroff.c  soc.c
soc/st/stm32/stm32f0x/: CMakeLists.txt  soc.c
soc/st/stm32/stm32f1x/: power.c  poweroff.c  soc.c
soc/st/stm32/stm32f4x/: power.c  poweroff.c
soc/st/stm32/stm32g0x/: power.c  poweroff.c  soc.c
soc/st/stm32/stm32g4x/: power.c  soc.c
soc/st/stm32/stm32h5x/: power.c  soc.c
soc/st/stm32/stm32h7rsx/: soc.c
soc/st/stm32/stm32h7x/: soc_m7.c
soc/st/stm32/stm32l0x/: power.c  soc.c
soc/st/stm32/stm32l1x/: power.c  poweroff.c  soc.c
soc/st/stm32/stm32l4x/: power.c  poweroff.c
soc/st/stm32/stm32l5x/: power.c  soc.c
soc/st/stm32/stm32n6x/: CMakeLists.txt  Kconfig  sections.ld  soc.c
soc/st/stm32/stm32u0x/: power.c  soc.c
soc/st/stm32/stm32u3x/: soc.c
soc/st/stm32/stm32u5x/: power.c  poweroff.c  soc.c
soc/st/stm32/stm32wb0x/: Kconfig  power.c  s2ram_marking.S  soc.c
soc/st/stm32/stm32wbax/: power.c  poweroff.c  soc.c
soc/st/stm32/stm32wbx/: power.c
soc/st/stm32/stm32wlx/: power.c  poweroff.c
(+351 files in other folders)
